--- a/app/src/main/assets/template.html
+++ b/app/src/main/assets/template.html
@@ -40,6 +40,22 @@
         img, audio, video {
             width: 100%;
         }
+        .relate_link_div {
+            width: 100%;
+            float: left;
+            margin-bottom: 5px;
+        }
+        .relate_link_div img {
+            float: left;
+            vertical-align: text-top;
+            width: 75px;
+            height: 75px;
+        }
+        ul, li { 
+            padding: 0;
+            margin: 0;
+            list-style: none;
+        }
     </style>
     <script src="file:///android_asset/jquery-1.11.2.min.js"></script>
     <script src="file:///android_asset/jquery.lazyload.min.js"></script>
